Start trinidad script with correct memory settings crated.